[project]
name = "paperrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.1.8",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "fastuuid==0.14.0",
    "filelock==3.19.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.2",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "jiter==0.14.0",
    "joblib==1.5.3",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "litellm==1.83.0",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "openai==2.31.0",
    "packaging==26.0",
    "pgvector==0.4.2",
    "pillow==11.3.0",
    "propcache==0.4.1",
    "psycopg==3.2.13",
    "psycopg-binary==3.2.13",
    "pydantic==2.13.0",
    "pydantic-core==2.46.0",
    "pypdf==6.10.0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "safetensors==0.7.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentence-transformers==5.1.2",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "torch==2.8.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "yarl==1.22.0",
    "zipp==3.23.1",
]
